<resources>
    <string name="app_name">calculator</string>
    <string name="_1">1</string>
    <string name="_4">4</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_0">0</string>
    <string name="bsub">-</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_5">5</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="b10">.</string>
    <string name="bmul">*</string>
    <string name="badd">+</string>
    <string name="bdiv">/</string>
    <string name="c">C</string>
    <string name="beql">=</string>
    <string name="enter_number">enter number</string>
</resources>
